0.8 Build 7
* AI更新：
    * 优化了AI袋口球的判定
    * AI超分球或锁定胜局的球会降低走位权重
    * 微调了一些权重
* 显示AI进攻时白球的落位范围
* 优化了二次碰撞的检测，但有可能未完全修复
* 完善了自定义球员的json结构